# Wryte

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP_GUIDE.md  docker-compose.yml  netlify.toml  package-lock.json  start-backend.bat  start-frontend.bat
.github/workflows/: ci.yml  deploy-space.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: analyze.py  health.py
backend/app/bucket/: __init__.py  readability.py
backend/tests/: test_health.py  test_readability.py
frontend/: .dockerignore  .env.local.example  Dockerfile.dev  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: InfoTooltip.tsx  ThemeToggle.tsx
frontend/components/editor/: Editor.tsx  Toolbar.tsx
frontend/components/input/: ContentTypeSelect.tsx  FocusKeywordInput.tsx
frontend/components/results/: ResultsTabs.tsx
frontend/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/lib/: api.ts  buckets.ts  editorStore.ts  smartPasteHtml.ts  types.ts
frontend/lib/__tests__/: smartPasteHtml.test.ts
huggingface/: Dockerfile  README.md  entrypoint.sh
