[project]
name = "wryte-api"
version = "0.1.0"
description = "Wryte - Content Intelligence Dashboard backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    # Readability formulas (bucket #1). Pinned to a range that ships
    # its own Pyphen-based syllable counter (no NLTK/CMU-dict download).
    "textstat>=0.7.2,<0.7.5",
    # HTML parsing for document-based input (bucket section extraction).
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
